# fastpragma

./: 02_dataloader.html  02_dataloader.md  03_model.html  03_model.md  README.md  core.html  core.html.md  data.html  data.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
fastpragma/: _modidx.py  core.py  data.py  dataloader.py  learner.py  model.py
nbs/: 00_core.ipynb  01_data.ipynb  02_dataloader.ipynb  02_model.ipynb  03_learner.ipynb  03_model.ipynb  None.parquet  index.ipynb  nbdev.yml
nbs/data/ml100k_pragma/: shard_0.parquet  shard_1.parquet  shard_2.parquet  shard_3.parquet  shard_4.parquet  tokenizer.json
site_libs/bootstrap/: bootstrap-2b6a17fde00b5ccb222bcc6fbf188e31.min.css
