[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastpragma"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Risheek kumar B", email = "b.risheekkumar@gmail.com"}]
keywords = ['nbdev']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "polars>=1.43.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "torch>=2.12.1",
    "fastai>=2.8.6",
    "fastcore>=1.13.9",
    "tokenizers>=0.22.2",
    "fastprogress>=1.1.6",
    "scipy>=1.18.0",
    "scikit-learn>=1.8.0",
    "httpx>=0.28.1",
    "nbdev>=3.0.15",
    "dialoghelper>=0.2.38",
    "rgapi>=0.1.11",
    "pyskills>=0.0.11",
]

[project.urls]
Repository = "https://github.com/risheekkumarb/fastpragma"
Documentation = "https://risheekkumarb.github.io/fastpragma/"

[project.entry-points.nbdev]
fastpragma = "fastpragma._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fastpragma.__version__"}

[tool.setuptools.packages.find]
include = ["fastpragma"]

[tool.nbdev]
